<resources>
    <string name="app_name">ToDo App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tasks">Tarefas</string>
    <string name="adicionar_tarefa">adicionar tarefa</string>
    <string name="default_day_info">mon\n12</string>
    <string name="description_label">Descrição</string>
    <string name="title_label">Titulo</string>
    <string name="date_label">Data</string>
    <string name="hour_label">Hora</string>
    <string name="add_task_btn_txt">Adicionar tarefa</string>
    <string name="cancel_txt_btn">Cancelar</string>
    <string name="edit_cancel">cancelar edição</string>
    <string name="edit_task">editar tarefa</string>
    <string name="enable_notifications">Habilitar Notificações</string>
    <string name="date_placeholder">dd/MM/yyyy</string>
    <string name="hour_placeholder">hh:mm</string>
    <string name="back_month">Mês Anterior</string>
    <string name="next_month">Proximo Mês</string>
    <string name="empty_state_placeholder_text">Ops! Você não tem \ntarefas neste dia</string>

    <string name="notification_channel_id">default channel</string>
    <string name="notification_channel_name">default</string>
</resources>