<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.addtodo.AddTodo">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/title_label"

        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="8dp"
        android:padding="1dp"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxLength="50"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/description_label"

        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="8dp"
        android:padding="1dp"
        android:paddingVertical="0dp"
        app:layout_constraintTop_toBottomOf="@id/title_text_field">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:inputType="textMultiLine"
            android:gravity="top|start"
            android:lines="6"
            android:maxLines="8"
            android:scrollbars="none"
            android:maxLength="255"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_text_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/date_label"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="16dp"
        android:padding="1dp"

        app:layout_constraintTop_toBottomOf="@id/description_text_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline2">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:focusable="false"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hour_text_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/hour_label"
        android:layout_marginHorizontal="8dp"
        android:padding="1dp"
        app:layout_constraintTop_toTopOf="@id/date_text_field"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:focusable="false"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/date_text_field"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:text="@string/enable_notifications"
        android:textSize="20sp"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/add_task_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_task_btn_txt"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
        android:id="@+id/cancel_add_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_txt_btn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@id/add_task_btn"/>

</androidx.constraintlayout.widget.ConstraintLayout>