<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:padding="8dp"
    android:elevation="8dp"
    app:strokeWidth="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_card_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_label"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/date_card_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_placeholder"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_margin="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/title_card_txt"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/hour_card_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour_placeholder"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toEndOf="@id/date_card_txt"
            app:layout_constraintTop_toTopOf="@id/date_card_txt"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>