<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.main.MainScreen"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_arrow_back_24"
        android:contentDescription="@string/back_month"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Setembro/2021"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/back_arrow"
        app:layout_constraintBottom_toBottomOf="@id/back_arrow"
        app:layout_constraintStart_toEndOf="@id/back_arrow"
        app:layout_constraintEnd_toStartOf="@id/forward_arrow"
        />
    <ImageView
        android:id="@+id/forward_arrow"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_arrow_forward_24"
        android:contentDescription="@string/next_month"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/back_arrow"
        app:layout_constraintBottom_toBottomOf="@id/back_arrow"
        app:tint="@color/black"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/day_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/back_arrow"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        />
    <TextView
        android:id="@+id/title_tasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tasks"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/day_list"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasks_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/title_tasks"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_todo_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add_24"
        android:contentDescription="@string/adicionar_tarefa"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>